Work on header overlap issues

--- a/ukbg/theme/static/bootstrap-3.3.5/less/siguv.less
+++ b/ukbg/theme/static/bootstrap-3.3.5/less/siguv.less
@@ -463,7 +463,7 @@ ul#portal-personaltools {
       .dropdown-menu-right;
     }
   }
-  @media (min-width: 769px) and (max-width: 991px) {
+  @media (min-width: 979px) and (max-width: 991px) {
     .dropdown-menu {
       left: 0;
     }
